--- a/Sadanghaeng/Sadanghaeng/Base.lproj/Main.storyboard
+++ b/Sadanghaeng/Sadanghaeng/Base.lproj/Main.storyboard
@@ -1014,15 +1014,6 @@
                                             <rect key="frame" x="0.0" y="0.0" width="207" height="82.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9rH-NC-eYP" userLabel="title">
-                                                    <rect key="frame" x="-42" y="-21" width="42" height="21"/>
-                                                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="16"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                    <variation key="widthClass=compact" misplaced="YES">
-                                                        <rect key="frame" x="18" y="20" width="183" height="18"/>
-                                                    </variation>
-                                                </label>
                                                 <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" distribution="equalSpacing" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="qXp-aQ-aXd">
                                                     <rect key="frame" x="-2" y="35" width="317" height="55"/>
                                                     <subviews>
@@ -1641,6 +1632,15 @@
                                                         </mask>
                                                     </variation>
                                                 </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9rH-NC-eYP" userLabel="title">
+                                                    <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" name="AppleSDGothicNeo-SemiBold" family="Apple SD Gothic Neo" pointSize="16"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                    <variation key="widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="18" y="20" width="183" height="18"/>
+                                                    </variation>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="9rH-NC-eYP" firstAttribute="top" secondItem="SXS-AL-gXR" secondAttribute="topMargin" constant="12" id="527-sT-LBx"/>
@@ -1683,8 +1683,13 @@
                                             </variation>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="date" destination="Abo-Pj-29D" id="y1M-MD-pOy"/>
+                                            <outlet property="dislike" destination="KsN-yC-Ddd" id="Rgo-bl-QKQ"/>
+                                            <outlet property="like" destination="FeU-DF-Jam" id="sge-AY-eYN"/>
                                             <outlet property="nameLabel" destination="9rH-NC-eYP" id="ayr-oX-CNY"/>
                                             <outlet property="nickname" destination="yyH-Zs-FdG" id="Exx-wz-yXI"/>
+                                            <outlet property="view" destination="Hys-xh-LDc" id="uCl-fF-ecc"/>
+                                            <outlet property="viewCount" destination="Hys-xh-LDc" id="dlK-Xz-NC6"/>
                                             <segue destination="VN5-dV-x7l" kind="show" id="uSG-KB-mVO"/>
                                         </connections>
                                     </tableViewCell>
@@ -2757,7 +2762,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zaz-oo-Kdh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1911.75" y="392.5"/>
+            <point key="canvasLocation" x="2045.25" y="392.5"/>
         </scene>
         <!--Search View Controller-->
         <scene sceneID="1x7-yY-gKr">
